--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-05 04:15:38
+lastsearch = 2024-08-05 09:13:52
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -21.4%%
-title = Chiếu trúc 1m8 - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/chiếu/trúc/1m8
+match = -25.0%%
+title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [tongkhonem.com]
 match = 57.7%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = 10.7%%
-title = Chiếu trúc đen không viền 1m6x2m [Được kiểm hàng ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-1m6x2m-duo-c-kie-m-ha-ng-22792570-117572091.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600324_undefined_-1_cateLvl2_0_95_23_-1
+match = -10.7%%
+title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
+url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117250615.html
 
 [chanrathanhthuy.com]
 match = -3.6%%
