--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-05 06:28:05
+lastsearch = 2024-08-05 09:12:49
 
 [www.facebook.com]
 match = -45.0%%
@@ -12,14 +12,14 @@ title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
 url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
-match = -75.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOooMTfV_cVCWKnQhFVAuzz1dBslf02r5endoerk5P5Cgv_fd_0_j
+match = -85.0%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOoqKA3QOneTDIPCUwyZHrwBdKCRcr1MJiaqnycFZ7hbgZhz1xJV4
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
@@ -34,7 +34,7 @@ url = https://tchome.vn/bo-chan-ga-goi-pyeoda-c3438.html
 [thegioidemonline.com]
 match = -90.0%%
 title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOopEzoIQgZQNhCX_8_ohVJ0JDAXxueTht7HOfFhKMD6JXwLdDAgW
+url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOoqrbGaHSPlzr1LXGKyJV1CSD0H_Utqjg_GMyrr2dYiYYEoM1r9U
 
 [shopee.vn]
 match = -30.0%%
@@ -64,7 +64,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.htm
 [vuanem.com]
 match = -15.0%%
 title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
-url = https://vuanem.com/brand/pyeoda?srsltid=AfmBOorBN_SyrgX0-7QoEPhHiGini8BvQHItZuGNfQH201X4KtUdCmKw
+url = https://vuanem.com/brand/pyeoda?srsltid=AfmBOopZMola9nIrPvA9agxZmbBCZQ7JAVvIfTdSd2foVbpKmh7n1E_P
 
 [changagoidemphuongbac.com]
 match = -15.0%%
