--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-05 09:09:23
+lastsearch = 2024-08-05 10:31:58
 
 [everon.online]
 match = -7.4%%
@@ -14,7 +14,7 @@ url = https://everon.online/products/bo-everon-sr01
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOooVaKv_ee-t0nn8DjaM9F88HcZaVMIyS_Ch3AchhqXIcjSPpN82
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOooy_FdJUI1iibxaTxarIRpp1oeURfXXJ-s4e-5bNE9F9e-WfA76
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
@@ -32,9 +32,9 @@ title = Bộ Chăn ga gối Everon EPM-21067
 url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 25.9%%
-title = Bộ chăn ga everon EPT -21045
-url = https://everonhn.com.vn/bo-chan-ga-everon-ept-21045
+match = 33.3%%
+title = Bộ chăn ga Everon ESB -22020
+url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
 match = -18.5%%
