--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-05 05:55:37
+lastsearch = 2024-08-05 10:30:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [dongahome.vn]
-match = 11.5%%
-title = Bộ chăn ga gối sông hồng urban SH_UC23 031
-url = https://dongahome.vn/chan-ga-goi-song-hong-urban-sh_uc23-031
+match = -42.3%%
+title = Bộ chăn ga gối sông hồng urban SH_UC23 026 - Giá tốt nhất
+url = https://dongahome.vn/chan-ga-goi-song-hong-sh_uc23-026
 
 [demhong.vn]
 match = -42.3%%
