--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-05 09:55:28
+lastsearch = 2024-08-05 10:37:56
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -107,9 +107,9 @@ title = Tăng "vọt" nhờ thực đơn tăng chiều cao ở tuổi 14 dễ ki
 url = https://midumenaq7.com/thuc-pham-tang-chieu-cao-tuoi-14-n1734.html
 
 [www.facebook.com]
-match = 6.2%%
-title = Người Việt Houston
-url = https://www.facebook.com/groups/NguoiVietHouston/
+match = 6.7%%
+title = Người Việt Cali
+url = https://www.facebook.com/groups/groupnguoivietcali/?locale=vi_VN
 
 [kenh14.vn]
 match = -81.2%%
