--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-05 03:56:00
+lastsearch = 2024-08-05 10:42:44
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -230,4 +230,9 @@ url = https://sieuthinem.com/ct-san-pham/121/nem-bong-ep-korea-vai-gam-sieu-thi-
 match = 0.0%%
 title = 
 url = https://www.sunrun.com/utility/ca/pge/how-read-your-pge-nem-bill
+
+[www.sce.com]
+match = 0.0%%
+title = 
+url = https://www.sce.com/residential/generating-your-own-power/net-energy-metering/Understanding-Your-Bill
 
