--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-05 04:29:44
+lastsearch = 2024-08-05 10:38:57
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -27,8 +27,8 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatlongthai.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [shopee.vn]
-match = -50.0%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+match = -45.5%%
+title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatthuynguyet.com]
