--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-05 12:58:37
+lastsearch = 2024-08-05 14:45:30
 
 [www.facebook.com]
 match = -141.2%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOooagFVa_H8S5cbdpwtbzUJhT5q16pcJRHpftBzd9ul9O6j8pt1-
+url = https://www.teadrunk.com/products/red-tea-chan-cha
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOooSBs2h5_jOdFvuiVJsFRrtrFbLQBcDISMaf1YRk1YvI2XbOyL3
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
 match = -194.1%%
