--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-05 14:00:41
+lastsearch = 2024-08-05 14:47:32
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -68.8%%
-title = Văn bản 14 giới Tiếp Hiện tân tu
-url = https://langmai.org/cong-tam-quan/dong-tu-tiep-hien/gioi-ban-tiep-hien-tan-tu/
+match = -18.8%%
+title = Tụng 14 Giới Tiếp Hiện
+url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
 
 [phaata.com]
 match = -118.8%%
@@ -222,9 +222,9 @@ title = Chào Mừng Quý Vị Đến Hoa Kỳ
 url = https://www.uscis.gov/sites/default/files/document/guides/M-618_v.pdf
 
 [shopee.vn]
-match = -156.2%%
-title = Cách tăng chiều cao tuổi 14 hiệu quả không nên bỏ qua
-url = https://shopee.vn/blog/tang-chieu-cao-tuoi-14/
+match = 25.0%%
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [momo.vn]
 match = -56.2%%
@@ -418,7 +418,7 @@ url = https://www.onehydraulics.com/products/3l-ss-14
 
 [www.lazada.vn]
 match = -131.2%%
-title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [www.chieulongdinh.com.vn]
@@ -475,4 +475,9 @@ url = https://vtv.vn/lich-phat-song.htm
 match = -175.0%%
 title = LẬT MẶT 7: MỘT ĐIỀU ƯỚC 2024 | Thông tin - Lịch chiếu
 url = https://www.cgv.vn/default/lat-mat-7.html
+
+[chieulongdinh.com.vn]
+match = -87.5%%
+title = Chiếu cói sọc | 1m x 2m - Chiếu Hiệp Thành
+url = http://chieulongdinh.com.vn/vi/san-pham/9/chieu-coi-soc-1m-x-2m.html
 
