--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-05 14:28:19
+lastsearch = 2024-08-05 14:45:09
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -72,9 +72,9 @@ title = IVECO DAILY PLUS – MẪU XE MINI BUS CAO CẤP 16
 url = https://thacoansuonghcm.com/iveco-daily-plus-mau-xe-mini-bus-cao-cap-16-19-cho-1438691.html
 
 [thuvienphapluat.vn]
-match = -50.0%%
-title = Thông tư 19/2016/TT-NHNN hoạt động thẻ ngân hàng
-url = https://thuvienphapluat.vn/van-ban/Tien-te-Ngan-hang/Thong-tu-19-2016-TT-NHNN-hoat-dong-the-ngan-hang-316056.aspx
+match = -95.8%%
+title = Luật Giá 2023 số 16/2023/QH15 áp dụng năm 2024 mới nhất
+url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Luat-Gia-2023-16-2023-QH15-519324.aspx
 
 [baocaobang.vn]
 match = -95.8%%
