--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-08-05 14:22:57
+lastsearch = 2024-08-05 14:49:36
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoqi_aXPHUnivpWN2C5qSb6TnDf9XoHLi02Ra-qQuolr3jYEfWmc
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.amazon.com]
 match = -50.0%%
